Moving onto future...

--- a/main.tex
+++ b/main.tex
@@ -83,9 +83,12 @@ Our current stations operate on the method of sending signals in multiple direct
 
 Spatial multiplexing involves splitting outgoing data into separate packets to be transferred simultaneously, over the same frequency, with the target antenna reassembling the packets upon receipt \cite{beam_sm}. Spatial multiplexing also allows for these packets of data to use walls and other obstacles almost like reflectors to bounce off. This technique would lead to a more efficient data transfer system, one better capable of handling increasing amounts of traffic on the network.
 
-To further improve data transfer methods, the implementation of beamforming would allow antennae to focus data in a directed way, almost like a beam. As Sun \textit{et al} outlines in \cite{beam_sm}, beamforming coupled with spatial multiplexing is highly appealing considering antennae could be steered in any direction and could bounce data off buildings, leading to very little loss of signal and reduced interference.
+To further improve data transfer methods, the implementation of beamforming would allow antennae to focus data in a directed way, almost like a beam. As discussed in section \textit{\ref{subsec:smallcells}}, researchers at NYU used beamforming to improve tests on indoor use of millimetre waves and small cells. Directional path loss exponents, initially reading 11.6 and 15.6 decibels for 28 and 73GHz bands respectively, were with beamforming reduced to 10.8 and 11.8 decibels, respectively, showing great improvement particularly in 73GHz bands.
 
-As discussed in section \textit{\ref{subsec:smallcells}}, researchers at NYU used beamforming to improve tests on indoor use of millimetre waves and small cells. 
+As Sun \textit{et al} outlines in \cite{beam_sm}, beamforming coupled with spatial multiplexing is highly appealing considering antennae could be steered in any direction and could bounce data off buildings, leading to very little loss of signal and reduced interference.
+\bigskip
+
+These four technologies are not the sole answers to problems encountered with 4G networks, nor are they the only options being explored. While the key technologies for 5G have yet to be decided on, general popularity and ongoing research suggest the aforementioned concepts are promising.
 
 \section{The Future of 5G}
 
