Talking about investment concerns, will finish tomorrow

--- a/main.tex
+++ b/main.tex
@@ -91,8 +91,13 @@ As Sun \textit{et al} outlines in \cite{beam_sm}, beamforming coupled with spati
 These four technologies are not the sole answers to problems encountered with 4G networks, nor are they the only options being explored. While the key technologies for 5G have yet to be decided on, general popularity and ongoing research suggest the aforementioned concepts are promising.
 
 \section{The Future of 5G}
+Having pondered the issues of current 4G networks and possible solutions using new technologies for 5G networks, the next natural step is to look at the possible future of 5G. One must weigh up the obvious and hidden problems facing 5G, as well as its likely use cases.
 
 \subsection{Problems Facing 5G}
+Complications and questions arise with each major development in any area of technology, 5G facing many. Issues regarding cost, investment and health are at the forefront of disrupting 5G developments. It is human nature to want immediate reward for investing in anything, be it stocks or new technologies. 5G development and deployment is an ongoing process, with networks not expected to be implemented on a large scale until after 2020. A recent Gartner Research Circle survey found that three-quarters of participants would be willing to pay more for a 5G service than for 4G \cite{gart5g}... will continue later
+
+With each major advancement in any technology, questions regarding health concerns arise. The 
+
 Cost, infrastructure etc. Companies / investment. Rural / cities. Health hazards. Refer to presentation notes.
 \subsection{Possible Use Cases}
 \subsubsection{In Personal Life}
