--- a/bibliography.bib
+++ b/bibliography.bib
@@ -128,3 +128,23 @@ Future Wireless Networks",
     year =         "2014",
     DOI =          "10.1109/MCOM.2014.6736747"
 }
+
+@article{health,
+% times cited: 13 (not many but very few resources regarding health risks of 5G)
+% Josef Noll et al
+    author =       "J. Noll et al",
+    title =        "5G: Service Continuity in Heterogeneous Environments",
+    journal =      "Wireless Personal Communications",
+    volume =       "57",
+    number =       "3",
+    pages =        "413–429",
+    year =         "2011",
+    DOI =          "https://doi.org/10.1007/s11277-010-0077-6"
+}
+
+@misc{gart5g,
+% Gartner Research Circle survey
+    author    = "Gartner",
+    title     = "Gartner End-User Survey Finds Three-Quarters of Respondents Are Willing to Pay More for 5G",
+    url       = "https://www.gartner.com/newsroom/id/3780466",
+}
