Discussing cost/health/infrastructure challenges

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -129,7 +129,7 @@ Future Wireless Networks",
     DOI =          "10.1109/MCOM.2014.6736747"
 }
 
-@article{health,
+@article{_health,
 % times cited: 13 (not many but very few resources regarding health risks of 5G)
 % Josef Noll et al
     author =       "J. Noll et al",
@@ -147,4 +147,11 @@ Future Wireless Networks",
     author    = "Gartner",
     title     = "Gartner End-User Survey Finds Three-Quarters of Respondents Are Willing to Pay More for 5G",
     url       = "https://www.gartner.com/newsroom/id/3780466",
+}
+
+@misc{health,
+% World Health Organisation
+    author    = "World Health Organisation",
+    title     = "Electromagnetic Fields and Public Health",
+    url       = "http://www.who.int/peh-emf/publications/facts/fs304/en/",
 }
