--- a/main.tex
+++ b/main.tex
@@ -94,11 +94,17 @@ These four technologies are not the sole answers to problems encountered with 4G
 Having pondered the issues of current 4G networks and possible solutions using new technologies for 5G networks, the next natural step is to look at the possible future of 5G. One must weigh up the obvious and hidden problems facing 5G, as well as its likely use cases.
 
 \subsection{Problems Facing 5G}
-Complications and questions arise with each major development in any area of technology, 5G facing many. Issues regarding cost, investment and health are at the forefront of disrupting 5G developments. It is human nature to want immediate reward for investing in anything, be it stocks or new technologies. 5G development and deployment is an ongoing process, with networks not expected to be implemented on a large scale until after 2020. A recent Gartner Research Circle survey found that three-quarters of participants would be willing to pay more for a 5G service than for 4G \cite{gart5g}... will continue later
+Complications and questions arise with each major development in any area of technology. Issues at the forefront of disruptions to 5G development include investment, health concerns, cost, and actually building the required infrastructure.
 
-With each major advancement in any technology, questions regarding health concerns arise. The 
+\subsubsection{Investment}It is human nature to want immediate reward for investing in anything, be it stocks or new technologies. 5G development and deployment is an ongoing process, with networks not expected to be implemented on a large scale until after 2020. A recent Gartner Research Circle survey found that three-quarters of participants would be willing to pay more for a 5G service than for 4G \cite{gart5g}, however one can imagine the results would have been significantly less enthusiastic had the question of willingness to invest been proposed.
 
-Cost, infrastructure etc. Companies / investment. Rural / cities. Health hazards. Refer to presentation notes.
+\subsubsection{Health}As any technology advances and incorporates new ideas, concerns regarding various health risks also develop. Micro-waves, broadcast in the same spectrum range as millimetre waves, have long been the subject of public suspicions. The World Health Organisation concluded in \cite{health} that, on the basis of scientific research, the only affect radio waves (0-6GHz) have on the human body is a minor increase in body temperature from exposure at very high intensities. While existing research suggests millimetre waves will not affect the body significantly more, the WHO's \textit{International EMF Project} aims to continuously evaluate any risks related to waves broadcast frequencies up to 300GHz.
+
+\subsubsection{Infrastructure}While 5G technologies will continue to require extensive funding for research and development, the cost of actually implementing the necessary infrastructure, in both rural and urban areas, could be colossal. Of course the requirement of large numbers of small cells entails a large initial cost, but the ongoing cost of maintenance must also be considered.
+
+There is also a trade off to be acknowledged in the case of rural areas - (will user numbers be worth implementing all the technology?)
+
+
 \subsection{Possible Use Cases}
 \subsubsection{In Personal Life}
 Gaming, streaming, IoT / smart homes, always connected.
@@ -109,5 +115,4 @@ Education, business / agriculture / monitoring, transport (autonomous), medical.
 \section{Conclusion}
 
 \printbibliography
-
 \end{document}
